--- a/dzpd.plist
+++ b/dzpd.plist
@@ -40,7 +40,7 @@
     <key>kind</key>
     <string>software</string>
     <key>title</key>
-    <string>skzq App download</string>
+    <string>dzpd App download</string>
    </dict>
   </dict>
  </array>
